# quic-messaging

./: .gitignore  Cargo.toml  HOWTO.md  README.md
.github/workflows/: ci-build-deploy.yml  ci.build-deploy.yml
Docker/: api.Dockerfile  ci.docker-compose.yml  local.docker-compose.yml
client/: .env  Cargo.toml  rustc-ice-2025-04-22T21_06_07-17575.txt
client/src/: app 2.rs  app.rs  event.rs  main.rs  run 2.rs  run.rs  tui.rs
client/src/tcp/: manager.rs  mod.rs
client/src/ui/: add_friends.rs  chat.rs  chats.rs  close.rs  confirm_friend_request.rs  confirm_unfriend.rs  create_chat.rs  edit.rs  friend_list.rs  friend_requests.rs  friends_menu.rs  login 2.rs  login.rs  main_menu 2.rs  main_menu.rs  mod.rs  profile.rs  registration 2.rs  registration.rs  tui.rs  user_menu 2.rs  user_menu.rs
client/src/utils/: constants.rs  helpers.rs
docker/: api.Dockerfile  ci.docker-compose.yml  frontend.Dockerfile  init.sql  local.docker-compose.yml  server.Dockerfile
server/: .env  Cargo.toml
server/src/: lib 2.rs  lib.rs  main.rs
server/src/entity/: blocked_users 2.rs  chat_members.rs  chats.rs  friend_requests.rs  friends.rs  message_reads.rs  messages.rs  mod.rs  prelude.rs  sea_orm_active_enums 2.rs  users.rs
server/src/handlers/: mod.rs
server/src/handlers/controllers/: auth_controller.rs  chat_controller.rs  mod.rs  user_controller.rs
server/src/handlers/repositories/: chat_repository.rs  mod 2.rs  user_repository.rs
server/src/handlers/services/: auth_service.rs  chat_service.rs  mod.rs  user_service.rs
server/src/utils/: cert.rs  constants.rs  drop_tables.txt  jwt.rs  mod.rs  security.rs  table_definitions.txt
server/src/utils/db/: getters.rs
server/src/utils/errors/: server_error.rs
server/src/utils/json_models/: auth_models.rs  mod.rs  request_models.rs  server_models.rs  user_models.rs
server/tests/: chat_service_tests.rs
shared/: Cargo.toml
shared/src/: client_response.rs  lib.rs  server_response.rs
shared/src/models/: auth_models.rs  chat_models.rs  mod.rs  user_models.rs
