[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.38.0", features = ["full"] }

# Useful utilities for streams, codecs, etc.
tokio-util = { version = "0.7.10", features = ["full"] }

# Asynchronous stream support
tokio-stream = { version = "0.1.15" }

# Futures and async combinators
futures = { version = "0.3.31", features = ["thread-pool"] }

# Terminal UI
ratatui = "0.28.1"
crossterm = "0.27.0"
