[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
# Async runtime
tokio = { version = "1.38.0", features = ["full"] }

# TUN device abstraction for tokio

# Utilities for tokio (codecs, etc.)
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.15" }

# Futures crate
futures = { version = "0.3.30", features = ["thread-pool"] }

# TUI dependencies (if you’re building a UI later)
ratatui = "0.28.1"
crossterm = "0.26"
# IP + TCP header parsing
etherparse = "0.13.0"
