[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
chrono = "0.4.39"
dotenv = "0.15.0" # For loading environment variables
sea-orm = { version = "1.1.10", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0" # For setting up constants
serde = { version = "1.0.216", features = ["derive"] } # For JSON serialization
serde_json = "1.0.133" # For working with JSON
strum = "0.27.1"
tokio = { version = "1.42.0", features = ["full"] } # Async runtime compatible with Actix and SeaORM
quinn = "0.10"
thiserror = "2.0.12"
argon2 = "0.5.3"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
rcgen = "0.11"
rustls = { version = "0.21" }
dotenvy = "0.15"
futures = "0.3.31"
[[bin]]
name = "server"
path = "src/main.rs"

